Removing MOE stripping & open sourcing superquota aspect
This is part 3 of open sourcing the SuperQuota config aspect for Quota beta. We
need to:

1) turn it on for SubmitConfigSource. This will cover most existing Endpoints
use cases, but will not make any of the code open sourced. [DONE: cl/162424432]
2) MOE strip out anything internal / not being launched [DONE: cl/162402153 and some here]
3) turn on open sourcing for SuperQuotaConfigAspect and remove all of the
preexisting MOE-stripping for quota in OpenApi parser, and setup. Add Quota
files to open source bundle.

-------------
Created by MOE: https://github.com/google/moe
MOE_MIGRATED_REVID=165481805
