# src/test/java/com/google/api/tools/framework/importers/swagger/testdata/library_example_yaml.yaml
@@ -10,6 +10,18 @@ schemes:
 basePath: /
 x-google-allow: configured
 x-google-management:
+  quota:
+    limits:
+      - name: bookstore-read-requests
+        values:
+          STANDARD: 1000 # user provided in Swagger as "default_limit"
+        unit: "1/min/{project}"
+        metric: bookstore/read_requests
+      - name: bookstore-write-requests
+        values:
+          STANDARD: 100 # user provided in Swagger as "default_limit"
+        unit: "1/min/{project}"
+        metric: bookstore/write_requests
   metrics:
     - name: bookstore/write_requests
       valueType: INT64 # default
@@ -67,6 +79,9 @@ paths:
           description: Successful operation
           schema:
             $ref: '#/definitions/ListShelvesResponse'
+      x-google-quota:
+        metricCosts:
+          bookstore/read_requests: 1
   '/v1/shelves/{shelvesId}':
     get:
       operationId: GetShelf
@@ -82,6 +97,9 @@ paths:
           description: Successful operation
           schema:
             $ref: '#/definitions/Shelf'
+      x-google-quota:
+        metricCosts:
+          bookstore/read_requests: 1
     delete:
       operationId: DeleteShelf
       description: Deletes a shelf. Returns NOT_FOUND if the shelf does not exist.
@@ -96,6 +114,9 @@ paths:
           description: Successful operation
           schema:
             $ref: '#/definitions/Empty'
+      x-google-quota:
+        metricCosts:
+          bookstore/write_requests: 1
   '/v1/restricted/shelves/{shelvesId}':
     get:
       operationId: RestrictedGetShelf
@@ -114,6 +135,9 @@ paths:
           description: Successful operation
           schema:
             $ref: '#/definitions/Shelf'
+      x-google-quota:
+        metricCosts:
+          bookstore/read_requests: 1
   '/v1/shelves/{shelvesId}:merge':
     post:
       operationId: MergeShelves
@@ -148,6 +172,9 @@ paths:
           description: Successful operation
           schema:
             $ref: '#/definitions/Shelf'
+      x-google-quota:
+        metricCosts:
+          bookstore/write_requests: 2
   '/v1/shelves/{shelvesId}/books':
     post:
       operationId: CreateBook
@@ -168,6 +195,9 @@ paths:
           description: Successful operation
           schema:
             $ref: '#/definitions/Book'
+      x-google-quota:
+        metricCosts:
+          bookstore/write_requests: 1
     get:
       operationId: ListBooks
       description: >-
@@ -206,6 +236,9 @@ paths:
           description: Successful operation
           schema:
             $ref: '#/definitions/ListBooksResponse'
+      x-google-quota:
+        metricCosts:
+          bookstore/read_requests: 1
   '/v1/shelves/{shelvesId}/books/{booksId}':
     get:
       operationId: GetBook
@@ -226,6 +259,9 @@ paths:
           description: Successful operation
           schema:
             $ref: '#/definitions/Book'
+      x-google-quota:
+        metricCosts:
+          bookstore/read_requests: 1
     delete:
       operationId: DeleteBook
       description: Deletes a book. Returns NOT_FOUND if the book does not exist.
@@ -245,6 +281,9 @@ paths:
           description: Successful operation
           schema:
             $ref: '#/definitions/Empty'
+      x-google-quota:
+        metricCosts:
+          bookstore/write_requests: 1
     put:
       operationId: UpdateBook
       description: |-
@@ -271,6 +310,9 @@ paths:
           description: Successful operation
           schema:
             $ref: '#/definitions/Book'
+      x-google-quota:
+        metricCosts:
+          bookstore/write_requests: 1
   '/v1/shelves/{shelvesId}/books/{booksId}:move':
     post:
       operationId: MoveBook
@@ -298,6 +340,9 @@ paths:
           description: Successful operation
           schema:
             $ref: '#/definitions/Book'
+      x-google-quota:
+        metricCosts:
+          bookstore/write_requests: 2
 definitions:
   Shelf:
     description: A Shelf contains a collection of books with a theme.
